force-app/main/default/objects/Campaign/fields/Automated_opportunity_type__c.field-meta.xml
<CustomField>
    <fullName>Automated_opportunity_type__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated opportunity type</label>
    <type>Text</type>
</CustomField>