force-app/main/default/objects/Campaign/fields/Campaign_type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_type__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1827</description>
    <label>Campaign type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>