force-app/main/default/objects/Campaign/fields/CampaignTypeScore__c.field-meta.xml
<CustomField>
    <fullName>CampaignTypeScore__c</fullName>
    <label>Campaign Type Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>