force-app/main/default/objects/Campaign/fields/wbsendit__Campaign_Monitor_Id__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Campaign_Monitor_Id__c</fullName>
    <externalId>true</externalId>
    <label>Campaign Monitor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>