force-app/main/default/objects/Campaign/fields/wbsendit__Email_Text_Version__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Email_Text_Version__c</fullName>
    <description>Text version of the email sent.</description>
    <inlineHelpText>Text version of the email sent.</inlineHelpText>
    <label>Email Text Version</label>
    <type>Url</type>
</CustomField>