force-app/main/default/objects/Campaign/fields/wbsendit__Email_Web_Version__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Email_Web_Version__c</fullName>
    <description>Web version of the email campaign.</description>
    <inlineHelpText>Web version of the email campaign.</inlineHelpText>
    <label>Email Web Version</label>
    <type>Url</type>
</CustomField>