force-app/main/default/objects/Campaign/fields/wbsendit__Num_Bounced__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Num_Bounced__c</fullName>
    <description>Number of bounced emails for the Campaign Monitor campaign.</description>
    <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
    <label>Num Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>