force-app/main/default/objects/Campaign/fields/wbsendit__Num_Mentions__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Num_Mentions__c</fullName>
    <description>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</description>
    <inlineHelpText>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</inlineHelpText>
    <label>Num Mentions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>