force-app/main/default/objects/Campaign/fields/wbsendit__Num_Recipients__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Num_Recipients__c</fullName>
    <description>Number of recipients for the associated Campaign Monitor campaign.</description>
    <inlineHelpText>Number of recipients for the associated Campaign Monitor campaign.</inlineHelpText>
    <label>Num Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>