force-app/main/default/objects/Campaign/fields/wbsendit__Num_Spam_Complaints__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Num_Spam_Complaints__c</fullName>
    <description>Number of Spam Complaints for the Campaign Monitor campaign.</description>
    <inlineHelpText>Number of Spam Complaints for the Campaign Monitor campaign.</inlineHelpText>
    <label>Num Spam Complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>