force-app/main/default/objects/Campaign/fields/wbsendit__Num_Unique_Opens__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Num_Unique_Opens__c</fullName>
    <description>Number of unique open emails for the associated Campaign Monitor campaign.</description>
    <inlineHelpText>Number of unique open emails for the associated Campaign Monitor campaign.</inlineHelpText>
    <label>Num Unique Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>