force-app/main/default/objects/Campaign/fields/wbsendit__Tags__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Tags__c</fullName>
    <inlineHelpText>Campaign Monitor tags associated with a Campaign.</inlineHelpText>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- None --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>