force-app/main/default/objects/Campaign/fields/wbsendit__World_View_Email_Tracking__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__World_View_Email_Tracking__c</fullName>
    <description>World view of the email campaign tracking.</description>
    <inlineHelpText>World view of the email campaign tracking.</inlineHelpText>
    <label>World View Email Tracking</label>
    <type>Url</type>
</CustomField>