force-app/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.ID</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
    <language>en_US</language>
</ListView>